force-app/main/default/objects/Inventory_Component__c/Inventory_Component__c.object-meta.xml
<CustomObject>
    <label>Inventory Component</label>
    <nameField>
        <displayFormat>ICOMP-{0000}</displayFormat>
        <label>Inventory Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>