force-app/main/default/objects/Inventory_Component__c/fields/Inventory_Component__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Component__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Component</label>
    <referenceTo>TrackIT__Inventory__c</referenceTo>
    <relationshipLabel>Component of</relationshipLabel>
    <relationshipName>Inventory_Components1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>