force-app/main/default/objects/Inventory_Component__c/fields/Inventory_Parent__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Parent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Parent</label>
    <referenceTo>TrackIT__Inventory__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Inventory_Components</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>