force-app/main/default/objects/Inventory_Component__c/fields/Quantity_Needed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Needed__c</fullName>
    <label>Quantity Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>